# MotionTracking

./: .gitignore  README.md
Archief/3Dfiles/Omhulsels/: Railing.stl  Railing_Omhulsels.stl  bottom_Raspberry.stl  bottom_body_v2_ziSKXtXT1l.stl  top_cover_v1_caKYhRjrv4.stl  top_with_rail_attachedment.stl
Archief/Radar_Code_multitracking/: Radar_Code_multitracking.ino
Documentatie/: README.md
Documentatie/hailo_docu/: README.md
Research/: README.md  Radar_Sensor_Schematic.fzz
Software/: README.md
Software/Archief/: jamiescreen.py  main.py  main2.py
Software/Archief/TestcodeTrackingJamie/: AirGesturetst.py  CameraFollow.py  Movement.py  bodyGesture.py
Software/Archief/Testing/: screen.py
Software/Archief/oude_tracking_code/: codepose.py  codepose2.py  mainlight.py
Software/Archief/vm/: webcontrol_old.py
Software/Arduino/: CodeArduino.ino  TestMovementAngle.ino  UartTest.ino
Software/Hailo_tracking/: commando  main.py  start_tracking.sh
Software/Hailo_tracking/basic_pipelines/: main.py  pose_estimation5.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/apps/depth/: depth.py  depth_pipeline.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/apps/detection/: detection.py  detection_pipeline.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/apps/detection_simple/: detection_pipeline_simple.py  detection_simple.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/apps/face_recognition/: face_recognition.py  face_recognition_pipeline.py  face_ui_callbacks.py  face_ui_elements.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/apps/instance_segmentation/: instance_segmentation.py  instance_segmentation_pipeline.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/apps/pose_estimation/: pose_estimation.py  pose_estimation_pipeline.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/core/common/: base_ui_callbacks.py  base_ui_elements.py  buffer_utils.py  camera_utils.py  config_utils.py  core.py  db_handler.py  db_visualizer.py  defines.py  embedding_visualizer.py  installation_utils.py  telegram_handler.py  test_utils.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/core/cpp_postprocess/: meson.build
Software/Hailo_tracking/hailo_apps/hailo_app_python/core/cpp_postprocess/cpp/: depth_estimation.cpp  depth_estimation.hpp  hailo_nms_decode.hpp  meson.build  tracker_update.cpp  tracker_update.hpp  vms_croppers.cpp
Software/Hailo_tracking/hailo_apps/hailo_app_python/core/gstreamer/: gstreamer_app.py  gstreamer_helper_pipelines.py
Software/Hailo_tracking/hailo_apps/hailo_app_python/core/installation/: compile_cpp.py  download_resources.py  post_install.py  set_env.py
Software/Radar/: Radar.py
Software/Radar/Radar_Code/: Radar_Code.ino
Software/Radar/Radar_Sensor_Library/Radar_Sensor_Library/: radarSensor.cpp  radarSensor.h
Software/Radar/Radar_test_code/: Radar_test_code.ino
Software/Radar/tweede_esp/mqtt_sender/: example_secrets.h  mqtt_sender.ino
Software/TestcodeTrackingJamie/: bodyGesture.py  notepad.py
Software/Testing/: camera.py
Software/Tracking/: codepose.py  codepose2.py  effects_lib.py  jamiescreen.py  main.py  main3.py  mainlight.py  screen.py
Software/Tracking/TestcodeEwoud/: main.py
Software/Tracking/TestfilesEwoud/PrototypeVisuals/: codepose.py  effects_lib.py  webcontrol.py
Software/Tracking/demo_radar/: effects_lib.py  main.py  web-control.py
Software/Visual_output/: Back_up2.py  Back_up3.py  Back_up4.py  main.py  main2.py  main3.py  main_website.py  old_main.py  requirements.txt
Software/Visual_output/demo_radar/: web-control.py
Software/Vm/: html.py  newweb.py  oldweb.py  webcontrol.py  webcontrol_new.py
Software/Vm/static/: style.css
Testcode/: README.txt  test.py  ver2.py
